infra/iam.tf
resource "aws_iam_user" "github_ci_user" {
  name = "github-ci-user"

  tags = {
    Purpose   = "CI/CD for ECR + ALB"
    ManagedBy = "Terraform"
  }
}

data "aws_iam_policy_document" "github_ci_ecr_policy" {
  statement {
    effect = "Allow"
    actions = [
      "ecr:GetAuthorizationToken"
    ]
    resources = ["*"]
  }

  statement {
    effect = "Allow"
    actions = [
      "ecr:BatchCheckLayerAvailability",
      "ecr:BatchGetImage",
      "ecr:PutImage",
      "ecr:InitiateLayerUpload",
      "ecr:UploadLayerPart",
      "ecr:CompleteLayerUpload",
      "ecr:DescribeRepositories",
      "ecr:CreateRepository",
      "ecr:ListImages",
      "ecr:DescribeImages",
      "ecr:GetDownloadUrlForLayer"
    ]
    resources = [
      aws_ecr_repository.frontend_repository.arn,
      aws_ecr_repository.backend_repository.arn
    ]
  }
}

resource "aws_iam_policy" "github_ecr_policy" {
  name        = "GitHubECRPolicy"
  description = "Policy for GitHub Actions to interact with ECR"
  policy      = data.aws_iam_policy_document.github_ci_ecr_policy.json
}

data "aws_iam_policy_document" "github_ci_ec2_policy" {
  statement {
    effect = "Allow"
    actions = [
      "ec2:DescribeVpcs",
      "ec2:DescribeSubnets",
      "ec2:DescribeRouteTables",
      "ec2:DescribeSecurityGroups",
      "ec2:DescribeAddresses",
      "ec2:DescribeInstances",
      "ec2:DescribeInternetGateways",
      "ec2:DescribeNetworkAcls",
      "ec2:DescribeTags"
    ]
    resources = ["*"]
  }
}

resource "aws_iam_policy" "github_ec2_policy" {
  name        = "GitHubEC2Policy"
  description = "Policy for GitHub Actions to interact with EC2 (needed by ALB Controller)"
  policy      = data.aws_iam_policy_document.github_ci_ec2_policy.json
}

resource "aws_iam_user_policy_attachment" "github_ci_attach_ecr" {
  user       = aws_iam_user.github_ci_user.name
  policy_arn = aws_iam_policy.github_ecr_policy.arn
}

resource "aws_iam_user_policy_attachment" "github_ci_attach_ec2" {
  user       = aws_iam_user.github_ci_user.name
  policy_arn = aws_iam_policy.github_ec2_policy.arn
}

resource "aws_iam_access_key" "github_ci_access_key" {
  user = aws_iam_user.github_ci_user.name
}

resource "aws_iam_openid_connect_provider" "eks" {
  url             = data.aws_eks_cluster.eks.identity[0].oidc[0].issuer
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.eks_oidc.certificates[0].sha1_fingerprint]
}

resource "aws_iam_role" "alb_controller" {
  name = "eks-aws-load-balancer-controller-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect    = "Allow"
      Principal = { Federated = aws_iam_openid_connect_provider.eks.arn }
      Action    = "sts:AssumeRoleWithWebIdentity"
      Condition = {
        StringEquals = {
          "${replace(data.aws_eks_cluster.eks.identity[0].oidc[0].issuer, "https://", "")}:sub" = "system:serviceaccount:kube-system:aws-load-balancer-controller",
          "${replace(data.aws_eks_cluster.eks.identity[0].oidc[0].issuer, "https://", "")}:aud" = "sts.amazonaws.com"
        }
      }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "alb_attach_policy" {
  role       = aws_iam_role.alb_controller.name
  policy_arn = aws_iam_policy.alb_controller_policy.arn
}

resource "kubernetes_service_account" "alb_controller_sa" {
  metadata {
    name      = "aws-load-balancer-controller"
    namespace = "kube-system"

    annotations = {
      "eks.amazonaws.com/role-arn" = aws_iam_role.alb_controller.arn
    }
  }
}
